# mtop

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
.claude/: hooks.json
.github/workflows/: ci.yml  publish.yml
openspec-archive-iteration3/: MANIFEST.md
openspec-archive-iteration3/changes/archive/2026-04-05-mvp-core/: design.md  proposal.md
openspec-archive-iteration3/specs/api-server/: spec.md
openspec-archive-iteration3/specs/cli-interface/: spec.md
openspec/changes/archive/2026-04-05-mvp-core/: design.md  proposal.md  tasks.md
openspec/changes/mvp-core/: tasks.md
openspec/changes/mvp-core/specs/cli-interface/: spec.md
openspec/specs/api-server/: spec.md
openspec/specs/cli-interface/: spec.md
openspec/specs/metrics-collection/: spec.md
openspec/specs/tui-dashboard/: spec.md
src/: cli.rs  config.rs  lib.rs  main.rs
src/metrics/: mod.rs  sampler.rs  types.rs
src/platform/: battery.rs  cpu.rs  disk.rs  gpu.rs  ioreport_ffi.rs  memory.rs  mod.rs  network.rs  power.rs  process.rs  soc.rs  temperature.rs
src/serve/: mod.rs
src/tui/: braille.rs  dashboard.rs  expanded.rs  gauge.rs  gradient.rs  helpers.rs  input.rs  layout.rs  mod.rs  prepare.rs  tests.rs  theme.rs
src/tui/panels/: cpu.rs  gpu.rs  memory.rs  mod.rs  network.rs  power.rs  process.rs
tests/: api_server.rs  cli_interface.rs  config_input_tests.rs  dashboard_rendering_tests.rs  helpers_tests.rs  iteration10_tests.rs  iteration17_tests.rs  iteration19_hardening_tests.rs  iteration19_panel_tests.rs  iteration20_config_input_tests.rs  iteration20_render_coverage_tests.rs  iteration22_braille_visual_tests.rs  iteration23_tests.rs  iteration2_requirements.rs  iteration3_requirements.rs  iteration6_metrics.rs  iteration7_polish.rs  iteration8_tests.rs  iteration9_tests.rs  metrics_collection.rs  metrics_collection_tests.rs  network_tests.rs  panel_rendering_tests.rs  platform_tests.rs  tui_dashboard.rs  tui_stories.rs
tests/snapshots/: tui_stories__cpu_compact_normal.snap  tui_stories__cpu_expanded_stress.snap  tui_stories__cpu_panel_compact_dark.snap  tui_stories__cpu_panel_compact_light.snap  tui_stories__cpu_panel_expanded_dark.snap  tui_stories__cpu_panel_expanded_light.snap  tui_stories__cpu_show_normal.snap  tui_stories__gpu_active.snap  tui_stories__mem_near_full.snap  tui_stories__network_active.snap  tui_stories__process_populated.snap
(+3 files in other folders)
