[package]
name = "mtop"
version = "0.1.0"
edition = "2024"
description = "System monitor for macOS — TUI, HTTP API, pipe mode"
license = "MIT"
repository = "https://github.com/Zeugsein/mtop"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
core-foundation = "0.10"
core-foundation-sys = "0.8"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
