[package]
name = "mtop"
version = "0.1.0"
edition = "2024"
description = "System monitor for macOS — TUI, HTTP API, pipe mode"
license = "MIT"
default-run = "mtop"
repository = "https://github.com/Zeugsein/mtop"

[[bin]]
name = "mtop"
path = "src/main.rs"

[[bin]]
name = "stories"
path = "src/bin/stories.rs"

[lib]
name = "mtop"
path = "src/lib.rs"

[dev-dependencies]
libc = "0.2"
insta = "1"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
core-foundation = "0.10"
core-foundation-sys = "0.8"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
toml = "0.8"
unicode-width = "0.2.2"
subtle = "2"
