[package]
name = "mtop-tui"
version = "0.1.0-rc.2"
edition = "2024"
description = "Sudo-less system monitor for Apple Silicon Macs: beautiful real-time braille graphs for CPU, GPU, temperature, memory, disk, network, power, and processes."
license = "MIT"
default-run = "mtop"
repository = "https://github.com/Zeugsein/mtop"
readme = "README.md"
keywords = ["macos", "apple-silicon", "tui", "monitoring", "gpu"]
categories = ["command-line-utilities"]

[features]
dev-tools = []

[[bin]]
name = "mtop"
path = "src/main.rs"

[[bin]]
name = "stories"
path = "src/bin/stories.rs"
required-features = ["dev-tools"]

[[bin]]
name = "hid_diag"
path = "src/bin/hid_diag.rs"
required-features = ["dev-tools"]

[lib]
name = "mtop"
path = "src/lib.rs"

[dev-dependencies]
libc = "0.2"
insta = "1"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
core-foundation = "0.10"
core-foundation-sys = "0.8"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
toml = "0.8"
unicode-width = "0.2.2"
subtle = "2"
parking_lot = "0.12"
